@@ -1,7 +1,10 @@
 [On going]
-1. Important!! Dile and class name changed (html_dom_parser->simple_html_dom)!
+1. Important!! file and class name changed (html_dom_parser->simple_html_dom)!
 2. Fix the bug of regular expression escaping chars.
-3. Add comment blocks handling process.
+3. Fix the bug of "\n" or "\t" in tags.
+4. Supports comments.
+5. Add self-closing tags: 'base', 'spacer'.
+6. 'save_file' no suppport anymore.
 
 [PHP Simple HTML DOM Parser v0.96 is released]
 1. (Request #1936000) New DOM operations(first_child, last_child, next_sibling, previous_sibling).
